# cl_server_compute_worker

./: CLAUDE.md  README.md  common.sh  main.py  pyproject.toml  run_all_tests.sh  start_worker.sh
compute_modules/image_conversion/: README.md  main.py  pyproject.toml
compute_modules/image_conversion/src/: __init__.py  base.py  runner.py  task.py
compute_modules/image_conversion/tests/: conftest.py  test_image_conversion_task.py
compute_modules/image_processor/: pyproject.toml
compute_modules/image_processor/src/: runner.py
compute_modules/image_resize/: README.md  main.py  pyproject.toml
compute_modules/image_resize/src/: __init__.py  runner.py  shared.py  task.py
compute_modules/image_resize/tests/: conftest.py  test_image_resize_task.py
src/: shared.py  worker.py
tests/: conftest.py  test_adapters.py  test_mqtt_capabilities.py  test_worker.py
