[project]
name = "compute_worker"
version = "0.1.0"
description = "Standalone Compute Worker"
requires-python = ">=3.9"
dependencies = [
    "sqlalchemy>=2.0.0",
    "paho-mqtt>=1.6.0",
    "cl-server-shared[all] @ git+https://github.com/cloudonlanapps/cl_server_shared.git",
    "cl-media-tools[compute] @ git+https://github.com/cloudonlanapps/cl_ml_tools.git",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.pytest.ini_options]
# Test configuration
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
# Exclude compute modules from root tests to avoid import conflicts
norecursedirs = ["compute_modules"]

[tool.setuptools]
packages = ["src"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
